# bosfs

./: .gitignore  CMakeLists.txt  filesystem.h
bosfs-cli/: bosfs.cpp  bosfs.h
bosfs-lib/: CMakeLists.txt  file_flags.h  filesystem.h
bosfs-lib/include/: bosfs_exceptions.cpp  bosfs_exceptions.h  development.h  filesystem.h  native-infile.cpp  native-infile.h
bosfs-lib/src/: development.cpp  filesystem.cpp  native-infile.cpp
cli/: main.cpp
